Feature/dave 281 gesamtauswertung pdf (#183)
* refactor auswertung api to join spreadsheet with data

* rename method in controller

* refactor of sorting

* refactor of sorting

* refactor of sorting

* add mapper for creation of data for ganglinie

* prepare ganglinien

* adapt method api for ganglinie creation

* adapt ganglinie service

* add creation of zaelhdaten mapper

* reset unit test

* adapt api ganglinie service

* build api

* remove unused code

* update geodateneai

* spotless

* add method

* first implementation

* unify methods

* reformat code

* reformat code

* add unit test

* hebung spring boot

* change mapstruct version

* change version

* refactor SpreadsheetService

* java doc

* add unit test

* adapt unit test

* change x axis data

* add tests

* add unit test

* pdf erzeugung eingebaut

* add unit test

* adapt unit test

* adapt unit test

* adapt code

* adapt unit test

* adapt code

* remove unused classes

* add different zaehlwerte to gsamtauswertung for multiple messstellen

* add javados

* add java docs

* add legend entry

* refactor auswertung methode for multiple messstellen

* adaÃpÃt ganglinien classes

* reformat code

* fix javadocs

* add unit test

* add unit test

* add final

* remove unused imports

* pdf erzeugung eingebaut

* change spring cloud version

* rename

* angepasst an mehrere Messstellen

* refactor

* Anmerkung eingearbeitet

* Anmerkung eingearbeitet

* Anmerkung eingearbeitet

* add javadoc

* add Tests

* sonar

---------

Co-authored-by: alexander.boxhorn <alexander.boxhorn@muenchen.de>