@@ -1,34 +1,49 @@
 package de.muenchen.dave.services.pdfgenerator;
 
 import de.muenchen.dave.domain.dtos.OptionsDTO;
+import de.muenchen.dave.domain.dtos.laden.LadeZaehldatenSteplineDTO;
 import de.muenchen.dave.domain.dtos.laden.LadeZaehldatenTableDTO;
 import de.muenchen.dave.domain.dtos.laden.LadeZaehldatumDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryBaseDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryBigDecimalDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryIntegerDTO;
 import de.muenchen.dave.domain.dtos.laden.messwerte.LadeMesswerteDTO;
 import de.muenchen.dave.domain.dtos.laden.messwerte.LadeProcessedMesswerteDTO;
 import de.muenchen.dave.domain.dtos.messstelle.FahrzeugOptionsDTO;
 import de.muenchen.dave.domain.dtos.messstelle.MessstelleOptionsDTO;
+import de.muenchen.dave.domain.dtos.messstelle.auswertung.MessstelleAuswertungIdDTO;
+import de.muenchen.dave.domain.dtos.messstelle.auswertung.MessstelleAuswertungOptionsDTO;
 import de.muenchen.dave.domain.elasticsearch.Knotenarm;
 import de.muenchen.dave.domain.elasticsearch.Zaehlstelle;
 import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.elasticsearch.detektor.Messstelle;
+import de.muenchen.dave.domain.enums.AuswertungsZeitraum;
 import de.muenchen.dave.domain.enums.TypeZeitintervall;
 import de.muenchen.dave.domain.enums.Zaehlart;
 import de.muenchen.dave.domain.enums.Zeitauswahl;
 import de.muenchen.dave.domain.enums.Zeitblock;
 import de.muenchen.dave.domain.mapper.DatentabellePdfZaehldatumMapper;
-import de.muenchen.dave.domain.mapper.GangliniePdfOptionsMapper;
+import de.muenchen.dave.domain.mapper.DiagrammPdfOptionsMapper;
 import de.muenchen.dave.domain.pdf.components.MessstelleninformationenPdfComponent;
 import de.muenchen.dave.domain.pdf.components.ZaehlstelleninformationenPdfComponent;
 import de.muenchen.dave.domain.pdf.components.ZusatzinformationenPdfComponent;
 import de.muenchen.dave.domain.pdf.helper.DatentabellePdfZaehldaten;
 import de.muenchen.dave.domain.pdf.helper.GanglinieTable;
 import de.muenchen.dave.domain.pdf.helper.GanglinieTableColumn;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTable;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableColumn;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableHeader;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableRow;
 import de.muenchen.dave.domain.pdf.templates.BasicPdf;
 import de.muenchen.dave.domain.pdf.templates.DatentabellePdf;
 import de.muenchen.dave.domain.pdf.templates.DiagrammPdf;
 import de.muenchen.dave.domain.pdf.templates.GangliniePdf;
 import de.muenchen.dave.domain.pdf.templates.PdfBean;
-import de.muenchen.dave.domain.pdf.templates.messstelle.BelastungsplanPdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.BasicMessstellePdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.BelastungsplanMessstellePdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.DatentabelleMessstellePdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.GanglinieMessstellePdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.GesamtauswertungMessstellePdf;
 import de.muenchen.dave.exceptions.DataNotFoundException;
 import de.muenchen.dave.services.ZaehlstelleIndexService;
 import de.muenchen.dave.services.ladezaehldaten.LadeZaehldatenService;
@@ -38,15 +53,22 @@ import de.muenchen.dave.util.DomainValues;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 @Slf4j
@@ -57,6 +79,7 @@ public class FillPdfBeanService {
     public static final String DEPARTMENT_FOOTER_NO_AUTHORITY = "no-authority";
     public static final String CHART_TITLE_GESAMTE_ZAEHLSTELLE = "Gesamte Zählstelle (Zulauf)";
     public static final String CHART_TITLE_GESAMTE_MESSSTELLE = "Gesamte Messstelle";
+    public static final String CHART_TITLE_MEHRERE_MESSSTELLE = "Alle ausgewählten Messstellen";
     public static final String CHART_TITLE_VON = "von";
     public static final String CHART_TITLE_NACH = "nach";
     public static final String CHART_TITLE_OPEN_PARENTHESIS = "(";
@@ -66,6 +89,8 @@ public class FillPdfBeanService {
     private static final String BELASTUNGSPLAN_TITLE_MESSSTELLE = "Belastungsplan - Messstelle ";
     private static final String GANGLINIE_TITLE_ZAEHLSTELLE = "Ganglinie - Zählstelle ";
     private static final String GANGLINIE_TITLE_MESSSTELLE = "Ganglinie - Messstelle ";
+    private static final String GESAMTAUSWERTUNG_TITLE_MESSSTELLE = "Zeitreihe - Messstelle ";
+    private static final String GESAMTAUSWERTUNG_TITLE_MEHRERE_MESSSTELLE = "Zeitreihe - Messstellen";
     private static final String DATENTABELLE_TITLE_ZAEHLSTELLE = "Listenausgabe - Zählstelle ";
     private static final String DATENTABELLE_TITLE_MESSSTELLE = "Listenausgabe - Messstelle ";
     private static final String CHART_TITLE_BLOCK = "Block";
@@ -77,12 +102,13 @@ public class FillPdfBeanService {
     private static final int UHRZEIT_HOURS_23 = 23;
     private static final int UHRZEIT_MINUTES_59 = 59;
     private static final int MAX_ELEMENTS_IN_GANGLINIE_TABLE = 13;
+    protected static final int MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE = 12;
     private static final String CELL_WIDTH_20_MM = "20mm";
     private static final String CELL_WIDTH_UNITS = "mm";
 
     private final ZaehlstelleIndexService indexService;
     private final LadeZaehldatenService ladeZaehldatenService;
-    private final GangliniePdfOptionsMapper gangliniePdfOptionsMapper;
+    private final DiagrammPdfOptionsMapper diagrammPdfOptionsMapper;
     private final DatentabellePdfZaehldatumMapper datentabellePdfZaehldatumMapper;
 
     private final MessstelleService messstelleService;
@@ -117,7 +143,7 @@ public class FillPdfBeanService {
      * @param department Organisationseinheit des Benutzers
      * @return Befüllte BasicPdf Bean.
      */
-    static BasicPdf fillBasicPdf(final BasicPdf basicPdf, final Zaehlung zaehlung, final String kreuzungsname, final Zaehlstelle zaehlstelle,
+    protected static BasicPdf fillBasicPdf(final BasicPdf basicPdf, final Zaehlung zaehlung, final String kreuzungsname, final Zaehlstelle zaehlstelle,
             final String department) {
         fillPdfBeanWithData(basicPdf, department);
         basicPdf.setZusatzinformationen(fillZusatzinformationen(basicPdf.getZusatzinformationen(), zaehlstelle, zaehlung));
@@ -126,10 +152,33 @@ public class FillPdfBeanService {
         return basicPdf;
     }
 
-    static de.muenchen.dave.domain.pdf.templates.messstelle.BasicPdf fillBasicPdf(final de.muenchen.dave.domain.pdf.templates.messstelle.BasicPdf basicPdf,
+    protected static BasicMessstellePdf fillBasicPdf(final BasicMessstellePdf basicPdf,
             final Messstelle messstelle, final String department, final MessstelleOptionsDTO optionsDTO, final String tagesTyp) {
         fillPdfBeanWithData(basicPdf, department);
         basicPdf.setMessstelleninformationen(fillMessstelleninformationen(basicPdf.getMessstelleninformationen(), messstelle, optionsDTO, tagesTyp));
+
+        return basicPdf;
+    }
+
+    /**
+     * Befuellt den Standardteil eines PDF-Files über Messstellen mit den Daten
+     *
+     * @param basicPdf Standard-Teil eines Messstellen-PDFs
+     * @param messstelle Ausgewertete Messstelle
+     * @param department Abteilung des anfragenden Nutzers
+     * @param optionsDTO Ausgewählte Optionen der Auswertung
+     * @param isSingleMessstelle Flag, ob nur eine Messstelle ausgewertet wurde
+     * @return Standardteil des PDFs
+     */
+    protected static BasicMessstellePdf fillBasicPdfGesamtauswertung(
+            final BasicMessstellePdf basicPdf,
+            final Messstelle messstelle,
+            final String department,
+            final MessstelleAuswertungOptionsDTO optionsDTO,
+            final boolean isSingleMessstelle) {
+        fillPdfBeanWithData(basicPdf, department);
+        basicPdf.setMessstelleninformationen(
+                fillMessstelleninformationenGesamtauswertung(basicPdf.getMessstelleninformationen(), messstelle, optionsDTO, isSingleMessstelle));
 
         return basicPdf;
     }
@@ -142,7 +191,7 @@ public class FillPdfBeanService {
      * @param zaehlung
      * @return
      */
-    static ZaehlstelleninformationenPdfComponent fillZaehlstelleninformationen(final ZaehlstelleninformationenPdfComponent zaehlstelleninformationen,
+    protected static ZaehlstelleninformationenPdfComponent fillZaehlstelleninformationen(final ZaehlstelleninformationenPdfComponent zaehlstelleninformationen,
             final String kreuzungsname, final Zaehlung zaehlung) {
         zaehlstelleninformationen.setProjektname(StringUtils.defaultIfEmpty(zaehlung.getProjektName(), KEINE_DATEN_VORHANDEN));
         zaehlstelleninformationen.setZaehldatum(zaehlung.getDatum().format(DDMMYYYY));
@@ -154,7 +203,7 @@ public class FillPdfBeanService {
         return zaehlstelleninformationen;
     }
 
-    static MessstelleninformationenPdfComponent fillMessstelleninformationen(final MessstelleninformationenPdfComponent messstelleninformationen,
+    protected static MessstelleninformationenPdfComponent fillMessstelleninformationen(final MessstelleninformationenPdfComponent messstelleninformationen,
             final Messstelle messstelle, final MessstelleOptionsDTO optionsDTO, final String tagesTyp) {
         messstelleninformationen.setStandort(StringUtils.defaultIfEmpty(messstelle.getStandort(), KEINE_DATEN_VORHANDEN));
         messstelleninformationen.setDetektierteFahrzeuge(StringUtils.defaultIfEmpty(messstelle.getDetektierteVerkehrsarten(), KEINE_DATEN_VORHANDEN));
@@ -166,10 +215,40 @@ public class FillPdfBeanService {
             messstelleninformationen
                     .setWochentag(StringUtils.defaultIfEmpty(tagesTyp, KEINE_DATEN_VORHANDEN));
         } else {
-            messstelleninformationen.setMesszeitraum(optionsDTO.getZeitraum().get(0).format(DDMMYYYY));
+            messstelleninformationen.setMesszeitraum(optionsDTO.getZeitraum().getFirst().format(DDMMYYYY));
             messstelleninformationen.setWochentagNeeded(false);
         }
         messstelleninformationen.setKommentar(messstelle.getKommentar());
+        return messstelleninformationen;
+    }
+
+    /**
+     * Befuellt die Messstelleinformationen mit den ausgewerteten Daten.
+     *
+     * @param messstelleninformationen PDF-Komponente der Messstelleninformationen
+     * @param messstelle ausewertet Messstelle
+     * @param optionsDTO Ausgewählte Option der Auswertung
+     * @param isSingleMessstelle flag, ob nur eine Messstelle auswertet wurde
+     * @return
+     */
+    protected static MessstelleninformationenPdfComponent fillMessstelleninformationenGesamtauswertung(
+            final MessstelleninformationenPdfComponent messstelleninformationen,
+            final Messstelle messstelle,
+            final MessstelleAuswertungOptionsDTO optionsDTO,
+            final boolean isSingleMessstelle) {
+        messstelleninformationen.setStandortNeeded(isSingleMessstelle);
+        messstelleninformationen.setKommentarNeeded(isSingleMessstelle);
+        if (isSingleMessstelle) {
+            messstelleninformationen.setStandort(StringUtils.defaultIfEmpty(messstelle.getStandort(), KEINE_DATEN_VORHANDEN));
+            messstelleninformationen.setKommentar(messstelle.getKommentar());
+        }
+        messstelleninformationen.setDetektierteFahrzeuge(StringUtils.defaultIfEmpty(messstelle.getDetektierteVerkehrsarten(), KEINE_DATEN_VORHANDEN));
+        messstelleninformationen.setMesszeitraum(ListUtils.emptyIfNull(optionsDTO.getJahre()).stream().map(String::valueOf).collect(Collectors.joining(", ")));
+        messstelleninformationen.setZeitintervallNeeded(true);
+        messstelleninformationen.setZeitintervall(optionsDTO.getZeitraum().stream().map(AuswertungsZeitraum::getLongText).collect(Collectors.joining(", ")));
+        messstelleninformationen.setWochentagNeeded(true);
+        messstelleninformationen
+                .setWochentag(StringUtils.defaultIfEmpty(optionsDTO.getTagesTyp().getBeschreibung(), KEINE_DATEN_VORHANDEN));
         return messstelleninformationen;
     }
 
@@ -181,7 +260,8 @@ public class FillPdfBeanService {
      * @param zaehlung
      * @return
      */
-    static ZusatzinformationenPdfComponent fillZusatzinformationen(final ZusatzinformationenPdfComponent zusatzinformationen, final Zaehlstelle zaehlstelle,
+    protected static ZusatzinformationenPdfComponent fillZusatzinformationen(final ZusatzinformationenPdfComponent zusatzinformationen,
+            final Zaehlstelle zaehlstelle,
             final Zaehlung zaehlung) {
         zusatzinformationen.setIstKommentarVorhandenZaehlstelle(StringUtils.isNotEmpty(zaehlstelle.getKommentar()));
         zusatzinformationen.setIstKommentarVorhandenZaehlung(StringUtils.isNotEmpty(zaehlung.getKommentar()));
@@ -243,7 +323,7 @@ public class FillPdfBeanService {
         return chartTitle.toString();
     }
 
-    static String createChartTitle(final MessstelleOptionsDTO options, final Messstelle messstelle) {
+    protected static String createChartTitle(final MessstelleOptionsDTO options, final Messstelle messstelle) {
         final StringBuilder chartTitle = new StringBuilder();
         if (options.getMessquerschnittIds().size() == messstelle.getMessquerschnitte().size()) {
             chartTitle.append(CHART_TITLE_GESAMTE_MESSSTELLE);
@@ -261,6 +341,36 @@ public class FillPdfBeanService {
         return chartTitle.toString().trim();
     }
 
+    protected static String createChartTitle(final MessstelleAuswertungOptionsDTO options, final Messstelle messstelle) {
+        final StringBuilder chartTitle = new StringBuilder();
+        if (options.getMessstelleAuswertungIds().size() > 1) {
+            chartTitle.append(CHART_TITLE_MEHRERE_MESSSTELLE);
+        } else {
+            CollectionUtils.emptyIfNull(options.getMessstelleAuswertungIds()).stream().findFirst()
+                    .ifPresent(messstelleAuswertungIdDTO -> {
+                        if (messstelle.getMessquerschnitte().size() == messstelleAuswertungIdDTO.getMqIds().size()) {
+                            chartTitle.append(CHART_TITLE_GESAMTE_MESSSTELLE);
+                        } else {
+                            messstelle.getMessquerschnitte().stream()
+                                    .filter(messquerschnitt -> messstelleAuswertungIdDTO.getMqIds().contains(messquerschnitt.getMqId()))
+                                    .forEach(messquerschnitt -> {
+                                        chartTitle.append(messquerschnitt.getMqId());
+                                        chartTitle.append(StringUtils.SPACE);
+                                        chartTitle.append("-");
+                                        chartTitle.append(StringUtils.SPACE);
+                                        chartTitle.append(StringUtils.defaultIfEmpty(messquerschnitt.getFahrtrichtung(), KEINE_DATEN_VORHANDEN));
+                                        chartTitle.append(StringUtils.SPACE);
+                                        chartTitle.append("-");
+                                        chartTitle.append(StringUtils.SPACE);
+                                        chartTitle.append(StringUtils.defaultIfEmpty(messquerschnitt.getStandort(), KEINE_DATEN_VORHANDEN));
+                                        chartTitle.append(StringUtils.SPACE);
+                                    });
+                        }
+                    });
+        }
+        return chartTitle.toString().trim();
+    }
+
     /**
      * Konvertiert den übergebenen Parameter (bisher Integer oder BigDecimal) in einen String.
      *
@@ -268,7 +378,7 @@ public class FillPdfBeanService {
      * @return Der übergebene Wert als String. Wenn der übergebene Wert 'null' beträgt wird ein leerer
      *         String zurückgegeben.
      */
-    static String convertZaehldata(final Number zaehldata) {
+    protected static String convertZaehldata(final Number zaehldata) {
         if (zaehldata == null) {
             return StringUtils.EMPTY;
         } else {
@@ -287,15 +397,15 @@ public class FillPdfBeanService {
      *
      * @param optionsDTO Options aus dem Frontend
      */
-    static String getTimeblockForChartTitle(final OptionsDTO optionsDTO) {
+    protected static String getTimeblockForChartTitle(final OptionsDTO optionsDTO) {
         return getTimeblockForChartTitle(optionsDTO.getZeitblock());
     }
 
-    static String getTimeblockForChartTitle(final MessstelleOptionsDTO optionsDTO) {
+    protected static String getTimeblockForChartTitle(final MessstelleOptionsDTO optionsDTO) {
         return getTimeblockForChartTitle(optionsDTO.getZeitblock());
     }
 
-    static String getTimeblockForChartTitle(final Zeitblock zeitblock) {
+    protected static String getTimeblockForChartTitle(final Zeitblock zeitblock) {
         final StringBuilder timeblock = new StringBuilder();
         timeblock.append(zeitblock.getStart().getHour());
         timeblock.append(StringUtils.SPACE);
@@ -320,7 +430,7 @@ public class FillPdfBeanService {
      * @param tdCount Anzahl der Zellen
      * @return Zellengröße als String in mm
      */
-    public static String calculateCellWidth(final Integer tdCount) {
+    protected static String calculateCellWidth(final Integer tdCount) {
         if (tdCount < 7) {
             // Bei wenig Spalten => Maximale Zellenbreite setzen
             return CELL_WIDTH_20_MM;
@@ -486,7 +596,7 @@ public class FillPdfBeanService {
         return diagrammPdf;
     }
 
-    public BelastungsplanPdf fillBelastungsplanPdf(final BelastungsplanPdf belastungsplanPdf, final String messstelleId,
+    public BelastungsplanMessstellePdf fillBelastungsplanPdf(final BelastungsplanMessstellePdf belastungsplanPdf, final String messstelleId,
             final MessstelleOptionsDTO options, final String chartAsBase64Png, final String department) {
         final Messstelle messstelle = this.messstelleService.getMessstelle(messstelleId);
         final LadeProcessedMesswerteDTO ladeProcessedMesswerteDTO = this.messwerteService.ladeMesswerte(messstelle.getId(), options);
@@ -537,7 +647,7 @@ public class FillPdfBeanService {
         GanglinieTable gt = new GanglinieTable();
 
         // Ausgewählte Fahrzeugklassen / -kategorien werden gemapped, damit nur diese im PDF angezeigt werden.
-        this.gangliniePdfOptionsMapper.options2gangliniePdf(gangliniePdf, options);
+        this.diagrammPdfOptionsMapper.options2gangliniePdf(gangliniePdf, options);
 
         for (final LadeZaehldatumDTO lzDto : ladeZaehldatumDTOS) {
             // Type ist 'null', wenn normales Intervall. Es sind im Gangliniendiagramm nur Stunden-, Tageswerte gewuenscht
@@ -592,7 +702,7 @@ public class FillPdfBeanService {
                 }
             }
         }
-        if (gtcList.size() != 0) {
+        if (CollectionUtils.isNotEmpty(gtcList)) {
             gt.setGanglinieTableColumns(gtcList);
             gtList.add(gt);
         }
@@ -613,8 +723,8 @@ public class FillPdfBeanService {
         return gangliniePdf;
     }
 
-    public de.muenchen.dave.domain.pdf.templates.messstelle.GangliniePdf fillGangliniePdf(
-            final de.muenchen.dave.domain.pdf.templates.messstelle.GangliniePdf gangliniePdf, final String messstelleId,
+    public GanglinieMessstellePdf fillGangliniePdf(
+            final GanglinieMessstellePdf gangliniePdf, final String messstelleId,
             final MessstelleOptionsDTO options, final String chartAsBase64Png,
             final String schematischeUebersichtAsBase64Png, final String department) {
         final Messstelle messstelle = this.messstelleService.getMessstelle(messstelleId);
@@ -636,7 +746,7 @@ public class FillPdfBeanService {
         GanglinieTable gt = new GanglinieTable();
 
         // Ausgewählte Fahrzeugklassen / -kategorien werden gemapped, damit nur diese im PDF angezeigt werden.
-        this.gangliniePdfOptionsMapper.options2gangliniePdf(gangliniePdf, options.getFahrzeuge());
+        this.diagrammPdfOptionsMapper.options2gangliniePdf(gangliniePdf, options.getFahrzeuge());
 
         for (final LadeMesswerteDTO messwert : messwerte) {
             // Type ist 'null', wenn normales Intervall. Es sind im Gangliniendiagramm nur Stunden-, Tageswerte gewuenscht
@@ -713,6 +823,161 @@ public class FillPdfBeanService {
     }
 
     /**
+     * Befuellt das PDf-Objekt der Auswertung mit den ausgewerteten Daten.
+     *
+     * @param gesamtauswertungPdf zu füllendes PDF-Objekt
+     * @param options ausgewählte Optionen der Auswertung
+     * @param auswertung zugrunde liegende Messwerte der Auswertung
+     * @param chartAsBase64Png Grafik der Auswertung
+     * @param department Abteilung des anfragenden Nutzers
+     * @return gefüllte PDF-Objekt
+     */
+    public GesamtauswertungMessstellePdf fillGesamtauswertungPdf(
+            final GesamtauswertungMessstellePdf gesamtauswertungPdf,
+            final MessstelleAuswertungOptionsDTO options,
+            final LadeZaehldatenSteplineDTO auswertung,
+            final String chartAsBase64Png,
+            final String department) {
+
+        final Collection<MessstelleAuswertungIdDTO> messstelleAuswertungIdDTOS = CollectionUtils.emptyIfNull(options.getMessstelleAuswertungIds());
+        final Optional<MessstelleAuswertungIdDTO> messstelleAuswertungIdDTO = messstelleAuswertungIdDTOS.stream()
+                .findFirst();
+        if (messstelleAuswertungIdDTO.isPresent()) {
+            final Messstelle messstelle = this.messstelleService.getMessstelleByMstId(messstelleAuswertungIdDTO.get().getMstId());
+            fillBasicPdfGesamtauswertung(gesamtauswertungPdf, messstelle, department, options, messstelleAuswertungIdDTOS.size() == 1);
+
+            final boolean hasMultipleMessstellen = messstelleAuswertungIdDTOS.size() > 1;
+            if (hasMultipleMessstellen) {
+                gesamtauswertungPdf.setDocumentTitle(GESAMTAUSWERTUNG_TITLE_MEHRERE_MESSSTELLE);
+            } else {
+                gesamtauswertungPdf.setDocumentTitle(GESAMTAUSWERTUNG_TITLE_MESSSTELLE + messstelle.getMstId());
+            }
+            gesamtauswertungPdf.setChartTitle(createChartTitle(options, messstelle));
+            gesamtauswertungPdf.setChart(chartAsBase64Png);
+
+            // Ausgewählte Fahrzeugklassen / -kategorien werden gemapped, damit nur diese im PDF angezeigt werden.
+            this.diagrammPdfOptionsMapper.options2gesamtauswertungPdf(gesamtauswertungPdf, options.getFahrzeuge());
+
+            final List<String> header = ListUtils.emptyIfNull(auswertung.getXAxisDataFirstChart());
+            final List<StepLineSeriesEntryBaseDTO> seriesEntries = ListUtils.emptyIfNull(auswertung.getSeriesEntriesFirstChart());
+            final List<String> legend = ListUtils.emptyIfNull(auswertung.getLegend());
+
+            final List<GesamtauswertungTableRow> gesamtauswertungTableRows = getGesamtauswertungTableRows(seriesEntries,
+                    legend, hasMultipleMessstellen, header);
+            final Map<Integer, List<GesamtauswertungTableRow>> rowsPerTable = splitTableRowsIfNecessary(gesamtauswertungTableRows);
+
+            final List<GesamtauswertungTable> gtList = getGesamtauswertungTables(header, rowsPerTable);
+
+            // Wenn mehrere Tabellen vonnöten => große Zählung, Zellenbreite auf Minimum verkleinern
+            // Hier sollte später dynamisch berechnet werden wie viele Tabellen benötigt werden und die Elemente gleichmäßig in diese verteilen.
+            if (gtList.size() > 1) {
+                gesamtauswertungPdf.setTableCellWidth("11.5mm");
+                // Wenn nur eine Tabelle => Zellenbreite anpassen
+            } else {
+                final Integer gtSize = gtList.getFirst().getGesamtauswertungTableRows().getFirst().getGesamtauswertungTableColumns().size();
+                gesamtauswertungPdf.setTableCellWidth(calculateCellWidth(gtSize));
+            }
+            gesamtauswertungPdf.setGesamtauswertungTables(gtList);
+        }
+        return gesamtauswertungPdf;
+    }
+
+    /**
+     * Erzeugt eine Liste an Tabellen mit den entsprechenden Zeilen.
+     *
+     * @param header Header
+     * @param rowsPerTable Zeilen pro Tabelle
+     * @return Liste an anzuzeigenden Tabellen
+     */
+    protected static List<GesamtauswertungTable> getGesamtauswertungTables(
+            final List<String> header,
+            final Map<Integer, List<GesamtauswertungTableRow>> rowsPerTable) {
+        final List<GesamtauswertungTableHeader> tableHeader = header.stream().map(s -> {
+            final GesamtauswertungTableHeader gesamtauswertungTableHeader = new GesamtauswertungTableHeader();
+            gesamtauswertungTableHeader.setHeader(s);
+            return gesamtauswertungTableHeader;
+        }).toList();
+
+        final List<List<GesamtauswertungTableHeader>> partitionTableHeaders = ListUtils.partition(tableHeader, MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE);
+        return IntStream.range(0, partitionTableHeaders.size()).mapToObj(index -> {
+            final GesamtauswertungTable gesamtauswertungTable = new GesamtauswertungTable();
+            gesamtauswertungTable.setGesamtauswertungTableRows(rowsPerTable.get(index));
+            gesamtauswertungTable.setGesamtauswertungTableHeaders(partitionTableHeaders.get(index));
+            return gesamtauswertungTable;
+        }).toList();
+    }
+
+    /**
+     * Erzeugt aus den ausgewerteten Daten einzelne Zeile zur Darstellung als Tabelle.
+     * Sind in einer Reihe zu viele Einträge, so wird diese auf mehrere Tabellen aufgeteilt.
+     *
+     * @param seriesEntries ausgewertete Daten
+     * @param legend Legende der Daten
+     * @param hasMultipleMessstellen Flag, ob mehrere Messstellen ausgewertet wurden
+     * @param header Headerzeile der Tabellen
+     * @return Map<Nummer der Tabelle, Zeilen pro Tabelle>
+     */
+    protected static List<GesamtauswertungTableRow> getGesamtauswertungTableRows(
+            final List<StepLineSeriesEntryBaseDTO> seriesEntries,
+            final List<String> legend,
+            final boolean hasMultipleMessstellen,
+            final List<String> header) {
+
+        return IntStream.range(0, seriesEntries.size())
+                .mapToObj(index -> {
+                    final GesamtauswertungTableRow row = new GesamtauswertungTableRow();
+                    row.setLegend(legend.get(index));
+                    if (hasMultipleMessstellen) {
+                        row.setCssColorBox("default");
+                    } else {
+                        row.setCssColorBox(row.getLegend().toLowerCase());
+                    }
+                    if (row.getCssColorBox().contains("%")) {
+                        row.setCssColorBox(row.getCssColorBox().replace(" %", "-anteil"));
+                    }
+                    final StepLineSeriesEntryBaseDTO baseDto = seriesEntries.get(index);
+                    if (baseDto.getClass() == StepLineSeriesEntryIntegerDTO.class) {
+                        final StepLineSeriesEntryIntegerDTO integerDto = (StepLineSeriesEntryIntegerDTO) baseDto;
+                        row.setGesamtauswertungTableColumns(
+                                integerDto.getYAxisData().stream().map(integer -> new GesamtauswertungTableColumn(convertZaehldata(integer))).toList());
+                    } else if (baseDto.getClass() == StepLineSeriesEntryBigDecimalDTO.class) {
+                        final StepLineSeriesEntryBigDecimalDTO bigdecimalDto = (StepLineSeriesEntryBigDecimalDTO) baseDto;
+                        row.setGesamtauswertungTableColumns(bigdecimalDto.getYAxisData().stream()
+                                .map(bigDecimal -> new GesamtauswertungTableColumn(convertZaehldata(bigDecimal))).toList());
+                    } else {
+                        row.setGesamtauswertungTableColumns(header.stream().map((headerValue) -> new GesamtauswertungTableColumn("???")).toList());
+                    }
+                    return row;
+                }).toList();
+    }
+
+    /**
+     * Wenn eine Row zu lang für die Tabelle ist, wird diese auf mehrere Tabellen vereteilt.
+     *
+     * @param gesamtauswertungTableRows Liste der Zeilen
+     * @return Map<Nummer der Tabelle, Zeilen pro Tabelle>
+     */
+    protected static Map<Integer, List<GesamtauswertungTableRow>> splitTableRowsIfNecessary(final List<GesamtauswertungTableRow> gesamtauswertungTableRows) {
+        final Map<Integer, List<GesamtauswertungTableRow>> rowsPerTable = new HashMap<>();
+        gesamtauswertungTableRows.forEach(gesamtauswertungTableRow -> {
+            final AtomicInteger tableIndex = new AtomicInteger(0);
+            final List<List<GesamtauswertungTableColumn>> partition = ListUtils.partition(gesamtauswertungTableRow.getGesamtauswertungTableColumns(),
+                    MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE);
+            partition.forEach(gesamtauswertungTableColumns -> {
+                if (!rowsPerTable.containsKey(tableIndex.get())) {
+                    rowsPerTable.put(tableIndex.get(), new ArrayList<>());
+                }
+                final GesamtauswertungTableRow row = new GesamtauswertungTableRow();
+                row.setCssColorBox(gesamtauswertungTableRow.getCssColorBox());
+                row.setLegend(gesamtauswertungTableRow.getLegend());
+                row.setGesamtauswertungTableColumns(gesamtauswertungTableColumns);
+                rowsPerTable.get(tableIndex.getAndIncrement()).add(row);
+            });
+        });
+        return rowsPerTable;
+    }
+
+    /**
      * Diese Methode befüllt eine DatentabellePdf Bean mit allen relevanten Daten, die später in den
      * Templates gebraucht werden. MustacheParts werden hier noch
      * nicht befüllt.
@@ -746,9 +1011,11 @@ public class FillPdfBeanService {
         return datentabellePdf;
     }
 
-    public de.muenchen.dave.domain.pdf.templates.messstelle.DatentabellePdf fillDatentabellePdf(
-            final de.muenchen.dave.domain.pdf.templates.messstelle.DatentabellePdf datentabellePdf, final String messstelleId,
-            final MessstelleOptionsDTO options, final String schematischeUebersichtAsBase64Png,
+    public DatentabelleMessstellePdf fillDatentabellePdf(
+            final DatentabelleMessstellePdf datentabellePdf,
+            final String messstelleId,
+            final MessstelleOptionsDTO options,
+            final String schematischeUebersichtAsBase64Png,
             final String department) {
         final Messstelle messstelle = this.messstelleService.getMessstelle(messstelleId);
         final LadeProcessedMesswerteDTO ladeProcessedMesswerteDTO = messwerteService.ladeMesswerte(messstelleId, options);
