@@ -1,19 +1,32 @@
 package de.muenchen.dave.services.pdfgenerator;
 
 import de.muenchen.dave.domain.dtos.OptionsDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryBaseDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryBigDecimalDTO;
+import de.muenchen.dave.domain.dtos.laden.StepLineSeriesEntryIntegerDTO;
 import de.muenchen.dave.domain.dtos.messstelle.MessstelleOptionsDTO;
+import de.muenchen.dave.domain.dtos.messstelle.auswertung.MessstelleAuswertungIdDTO;
+import de.muenchen.dave.domain.dtos.messstelle.auswertung.MessstelleAuswertungOptionsDTO;
+import de.muenchen.dave.domain.elasticsearch.MessquerschnittRandomFactory;
 import de.muenchen.dave.domain.elasticsearch.MessstelleRandomFactory;
 import de.muenchen.dave.domain.elasticsearch.Zaehlstelle;
 import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.elasticsearch.detektor.Messquerschnitt;
 import de.muenchen.dave.domain.elasticsearch.detektor.Messstelle;
+import de.muenchen.dave.domain.enums.AuswertungsZeitraum;
 import de.muenchen.dave.domain.enums.TagesTyp;
 import de.muenchen.dave.domain.enums.Zeitblock;
 import de.muenchen.dave.domain.pdf.components.MessstelleninformationenPdfComponent;
 import de.muenchen.dave.domain.pdf.components.ZaehlstelleninformationenPdfComponent;
 import de.muenchen.dave.domain.pdf.components.ZusatzinformationenPdfComponent;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTable;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableColumn;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableHeader;
+import de.muenchen.dave.domain.pdf.helper.GesamtauswertungTableRow;
 import de.muenchen.dave.domain.pdf.templates.BasicPdf;
+import de.muenchen.dave.domain.pdf.templates.messstelle.BasicMessstellePdf;
 import de.muenchen.dave.spring.services.pdfgenerator.FillPdfBeanServiceSpringTest;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Test;
 
@@ -21,9 +34,12 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -125,7 +141,7 @@ class FillPdfBeanServiceTest {
     // Messstelle
     @Test
     void fillBasicPdf_Messstelle() {
-        final var basicPdf = new de.muenchen.dave.domain.pdf.templates.messstelle.BasicPdf();
+        final var basicPdf = new BasicMessstellePdf();
         final Messstelle messstelle = MessstelleRandomFactory.getMessstelle();
         final String department = "TestOU";
         final String tagesTyp = TagesTyp.SAMSTAG.name();
@@ -154,7 +170,7 @@ class FillPdfBeanServiceTest {
         assertThat(informationen.getStandort(), is(messstelle.getStandort()));
         assertThat(informationen.getDetektierteFahrzeuge(), is(messstelle.getDetektierteVerkehrsarten()));
         assertThat(informationen.getMesszeitraum(),
-                is(String.format("%s - %s", optionsDTO.getZeitraum().get(0).format(DDMMYYYY), optionsDTO.getZeitraum().get(0).format(DDMMYYYY))));
+                is(String.format("%s - %s", optionsDTO.getZeitraum().getFirst().format(DDMMYYYY), optionsDTO.getZeitraum().getFirst().format(DDMMYYYY))));
         assertThat(informationen.getWochentag(), is(tagesTyp));
         assertThat(informationen.isWochentagNeeded(), is(true));
         assertThat(informationen.getKommentar(), is(messstelle.getKommentar()));
@@ -164,7 +180,7 @@ class FillPdfBeanServiceTest {
         FillPdfBeanService.fillMessstelleninformationen(informationen, messstelle, optionsDTO, tagesTyp);
         assertThat(informationen.getStandort(), is(messstelle.getStandort()));
         assertThat(informationen.getDetektierteFahrzeuge(), is(messstelle.getDetektierteVerkehrsarten()));
-        assertThat(informationen.getMesszeitraum(), is(optionsDTO.getZeitraum().get(0).format(DDMMYYYY)));
+        assertThat(informationen.getMesszeitraum(), is(optionsDTO.getZeitraum().getFirst().format(DDMMYYYY)));
         assertThat(informationen.isWochentagNeeded(), is(false));
         assertThat(informationen.getWochentag(), is(nullValue()));
         assertThat(informationen.getKommentar(), is(messstelle.getKommentar()));
@@ -181,7 +197,7 @@ class FillPdfBeanServiceTest {
 
         assertThat(FillPdfBeanService.createChartTitle(optionsDTO, messstelle), is(FillPdfBeanService.CHART_TITLE_GESAMTE_MESSSTELLE));
 
-        final Messquerschnitt messquerschnitt = messstelle.getMessquerschnitte().get(0);
+        final Messquerschnitt messquerschnitt = messstelle.getMessquerschnitte().getFirst();
         optionsDTO.setMessquerschnittIds(Set.of(messquerschnitt.getMqId()));
         String expectedChartTitle = messquerschnitt.getMqId() +
                 StringUtils.SPACE +
@@ -203,5 +219,218 @@ class FillPdfBeanServiceTest {
         assertThat(FillPdfBeanService.getTimeblockForChartTitle(optionsDTO), is("10 - 11 Uhr"));
         optionsDTO.setZeitblock(Zeitblock.ZB_00_24);
         assertThat(FillPdfBeanService.getTimeblockForChartTitle(optionsDTO), is("0 - 24 Uhr"));
+    }
+
+    @Test
+    void fillMessstelleninformationenGesamtauswertung() {
+        MessstelleninformationenPdfComponent informationen = new MessstelleninformationenPdfComponent();
+        final Messstelle messstelle = MessstelleRandomFactory.getMessstelle();
+        final MessstelleAuswertungOptionsDTO optionsDTO = new MessstelleAuswertungOptionsDTO();
+        optionsDTO.setJahre(List.of(2006, 2007, 2008));
+        optionsDTO.setTagesTyp(TagesTyp.SAMSTAG);
+        optionsDTO.setZeitraum(List.of(AuswertungsZeitraum.JANUAR, AuswertungsZeitraum.FEBRUAR, AuswertungsZeitraum.MAERZ));
+        boolean isSingleMessstelle = false;
+
+        FillPdfBeanService.fillMessstelleninformationenGesamtauswertung(informationen, messstelle, optionsDTO, isSingleMessstelle);
+        assertThat(informationen.isStandortNeeded(), is(isSingleMessstelle));
+        assertThat(informationen.getStandort(), is(nullValue()));
+        assertThat(informationen.isKommentarNeeded(), is(isSingleMessstelle));
+        assertThat(informationen.getKommentar(), is(nullValue()));
+        assertThat(informationen.getDetektierteFahrzeuge(), is(messstelle.getDetektierteVerkehrsarten()));
+        assertThat(informationen.getMesszeitraum(),
+                is(optionsDTO.getJahre().stream().map(String::valueOf).collect(Collectors.joining(", "))));
+        assertThat(informationen.isZeitintervallNeeded(), is(true));
+        assertThat(informationen.getZeitintervall(),
+                is(optionsDTO.getZeitraum().stream().map(AuswertungsZeitraum::getLongText).collect(Collectors.joining(", "))));
+        assertThat(informationen.isWochentagNeeded(), is(true));
+        assertThat(informationen.getWochentag(), is(optionsDTO.getTagesTyp().getBeschreibung()));
+
+        informationen = new MessstelleninformationenPdfComponent();
+        isSingleMessstelle = true;
+        FillPdfBeanService.fillMessstelleninformationenGesamtauswertung(informationen, messstelle, optionsDTO, isSingleMessstelle);
+        assertThat(informationen.isStandortNeeded(), is(isSingleMessstelle));
+        assertThat(informationen.getStandort(), is(messstelle.getStandort()));
+        assertThat(informationen.isKommentarNeeded(), is(isSingleMessstelle));
+        assertThat(informationen.getKommentar(), is(messstelle.getKommentar()));
+        assertThat(informationen.getDetektierteFahrzeuge(), is(messstelle.getDetektierteVerkehrsarten()));
+        assertThat(informationen.getMesszeitraum(),
+                is(optionsDTO.getJahre().stream().map(String::valueOf).collect(Collectors.joining(", "))));
+        assertThat(informationen.isZeitintervallNeeded(), is(true));
+        assertThat(informationen.getZeitintervall(),
+                is(optionsDTO.getZeitraum().stream().map(AuswertungsZeitraum::getLongText).collect(Collectors.joining(", "))));
+        assertThat(informationen.isWochentagNeeded(), is(true));
+        assertThat(informationen.getWochentag(), is(optionsDTO.getTagesTyp().getBeschreibung()));
+    }
+
+    @Test
+    void createChartTitleGesamtauswertung() {
+        final MessstelleAuswertungOptionsDTO options = new MessstelleAuswertungOptionsDTO();
+        final MessstelleAuswertungIdDTO messstelleAuswertungIdDTO = new MessstelleAuswertungIdDTO();
+        messstelleAuswertungIdDTO.setMstId("123");
+        options.setMessstelleAuswertungIds(Set.of(messstelleAuswertungIdDTO, new MessstelleAuswertungIdDTO()));
+        assertThat(FillPdfBeanService.createChartTitle(options, new Messstelle()), is(FillPdfBeanService.CHART_TITLE_MEHRERE_MESSSTELLE));
+
+        final Messstelle messstelle = new Messstelle();
+        messstelle.setMessquerschnitte(new ArrayList<>());
+        messstelleAuswertungIdDTO.setMqIds(new HashSet<>());
+        options.setMessstelleAuswertungIds(Set.of(messstelleAuswertungIdDTO));
+        assertThat(FillPdfBeanService.createChartTitle(options, messstelle), is(FillPdfBeanService.CHART_TITLE_GESAMTE_MESSSTELLE));
+
+        final Messquerschnitt messquerschnitt = MessquerschnittRandomFactory.getMessquerschnitt();
+        final Messquerschnitt messquerschnitt1 = MessquerschnittRandomFactory.getMessquerschnitt();
+        messstelle.setMessquerschnitte(List.of(messquerschnitt, messquerschnitt1));
+        final Set<String> mqIds = new HashSet<>();
+        mqIds.add(messquerschnitt1.getMqId());
+        messstelleAuswertungIdDTO.setMstId(messstelle.getMstId());
+        messstelleAuswertungIdDTO.setMqIds(mqIds);
+        options.setMessstelleAuswertungIds(Set.of(messstelleAuswertungIdDTO));
+
+        final String expected = String.format("%s - %s - %s", messquerschnitt1.getMqId(), messquerschnitt1.getFahrtrichtung(), messquerschnitt1.getStandort());
+
+        assertThat(FillPdfBeanService.createChartTitle(options, messstelle), is(expected));
+
+    }
+
+    @Test
+    void getGesamtauswertungTableRows() {
+        final List<StepLineSeriesEntryBaseDTO> seriesEntries = new ArrayList<>();
+        final StepLineSeriesEntryIntegerDTO entryInt = new StepLineSeriesEntryIntegerDTO();
+        entryInt.setYAxisData(List.of(123, 456));
+        final StepLineSeriesEntryBigDecimalDTO entryDec = new StepLineSeriesEntryBigDecimalDTO();
+        entryDec.setYAxisData(List.of(BigDecimal.ONE, BigDecimal.TEN));
+        seriesEntries.add(entryInt);
+        seriesEntries.add(entryDec);
+        final List<String> legend = new ArrayList<>();
+        legend.add("Legend 1");
+        legend.add("Legend 2");
+        final List<String> header = new ArrayList<>();
+        header.add("header 1");
+        header.add("header 2");
+        final boolean hasMultipleMessstellen = true;
+
+        final List<GesamtauswertungTableRow> expected = new ArrayList<>();
+        final GesamtauswertungTableRow row1 = new GesamtauswertungTableRow();
+        row1.setLegend(legend.getFirst());
+        row1.setCssColorBox("default");
+        row1.setGesamtauswertungTableColumns(List.of(new GesamtauswertungTableColumn(String.valueOf(entryInt.getYAxisData().getFirst())),
+                new GesamtauswertungTableColumn(String.valueOf(entryInt.getYAxisData().getLast()))));
+        final GesamtauswertungTableRow row2 = new GesamtauswertungTableRow();
+        row2.setLegend(legend.getLast());
+        row2.setGesamtauswertungTableColumns(List.of(new GesamtauswertungTableColumn(String.valueOf(entryDec.getYAxisData().getFirst())),
+                new GesamtauswertungTableColumn(String.valueOf(entryDec.getYAxisData().getLast()))));
+        row2.setCssColorBox("default");
+        expected.add(row1);
+        expected.add(row2);
+        assertThat(FillPdfBeanService.getGesamtauswertungTableRows(seriesEntries, legend, hasMultipleMessstellen, header), is(expected));
+    }
+
+    @Test
+    void splitTableRowsIfNecessary() {
+        final List<GesamtauswertungTableRow> gesamtauswertungTableRows = new ArrayList<>();
+        final GesamtauswertungTableRow row = new GesamtauswertungTableRow();
+        row.setLegend("Legend");
+        row.setCssColorBox("default");
+        final ArrayList<GesamtauswertungTableColumn> gesamtauswertungTableColumns = new ArrayList<>();
+        for (int index = 0; index < FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE; index++) {
+            gesamtauswertungTableColumns.add(new GesamtauswertungTableColumn(String.valueOf(index)));
+        }
+        row.setGesamtauswertungTableColumns(gesamtauswertungTableColumns);
+        gesamtauswertungTableRows.add(row);
+
+        final Map<Integer, List<GesamtauswertungTableRow>> expected = new HashMap<>();
+        expected.put(0, gesamtauswertungTableRows);
+
+        assertThat(FillPdfBeanService.splitTableRowsIfNecessary(gesamtauswertungTableRows), is(expected));
+
+        // Test 2
+        final List<GesamtauswertungTableRow> gesamtauswertungTableRowsTest2 = new ArrayList<>();
+        final var rowTest2 = new GesamtauswertungTableRow();
+        rowTest2.setLegend("Legend");
+        rowTest2.setCssColorBox("default");
+        final ArrayList<GesamtauswertungTableColumn> gesamtauswertungTableColumnsTest2 = new ArrayList<>();
+        for (int index = 0; index < FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE + 3; index++) {
+            gesamtauswertungTableColumnsTest2.add(new GesamtauswertungTableColumn(String.valueOf(index)));
+        }
+        rowTest2.setGesamtauswertungTableColumns(gesamtauswertungTableColumnsTest2);
+        gesamtauswertungTableRowsTest2.add(rowTest2);
+
+        final Map<Integer, List<GesamtauswertungTableRow>> expectedTest2 = new HashMap<>();
+
+        final List<List<GesamtauswertungTableColumn>> partition = ListUtils.partition(gesamtauswertungTableColumnsTest2,
+                FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE);
+        final GesamtauswertungTableRow row1 = new GesamtauswertungTableRow();
+        row1.setGesamtauswertungTableColumns(partition.getFirst());
+        row1.setLegend("Legend");
+        row1.setCssColorBox("default");
+        final GesamtauswertungTableRow row2 = new GesamtauswertungTableRow();
+        row2.setGesamtauswertungTableColumns(partition.getLast());
+        row2.setLegend("Legend");
+        row2.setCssColorBox("default");
+        expectedTest2.put(0, List.of(row1));
+        expectedTest2.put(1, List.of(row2));
+
+        assertThat(FillPdfBeanService.splitTableRowsIfNecessary(gesamtauswertungTableRowsTest2), is(expectedTest2));
+
+    }
+
+    @Test
+    void getGesamtauswertungTables() {
+        final List<GesamtauswertungTableHeader> headerExpected = new ArrayList<>();
+        final List<String> header = new ArrayList<>();
+        final Map<Integer, List<GesamtauswertungTableRow>> rowsPerTable = new HashMap<>();
+        final List<GesamtauswertungTableRow> gesamtauswertungTableRows = new ArrayList<>();
+        final GesamtauswertungTableRow row = new GesamtauswertungTableRow();
+        row.setLegend("Legend");
+        row.setCssColorBox("default");
+        final ArrayList<GesamtauswertungTableColumn> gesamtauswertungTableColumns = new ArrayList<>();
+        for (int index = 0; index < FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE; index++) {
+            gesamtauswertungTableColumns.add(new GesamtauswertungTableColumn(String.valueOf(index)));
+            final GesamtauswertungTableHeader gesamtauswertungTableHeader = new GesamtauswertungTableHeader();
+            gesamtauswertungTableHeader.setHeader(String.valueOf(index));
+            headerExpected.add(gesamtauswertungTableHeader);
+            header.add(gesamtauswertungTableHeader.getHeader());
+        }
+        row.setGesamtauswertungTableColumns(gesamtauswertungTableColumns);
+        gesamtauswertungTableRows.add(row);
+        rowsPerTable.put(0, gesamtauswertungTableRows);
+
+        final List<GesamtauswertungTable> expected = new ArrayList<>();
+        final GesamtauswertungTable gesamtauswertungTable = new GesamtauswertungTable();
+        gesamtauswertungTable.setGesamtauswertungTableHeaders(headerExpected);
+        gesamtauswertungTable.setGesamtauswertungTableRows(gesamtauswertungTableRows);
+        expected.add(gesamtauswertungTable);
+        assertThat(FillPdfBeanService.getGesamtauswertungTables(header, rowsPerTable), is(expected));
+    }
+
+    @Test
+    void getGesamtauswertungTablesWithSplitting() {
+        final List<GesamtauswertungTableHeader> headerExpected = new ArrayList<>();
+        final List<String> header = new ArrayList<>();
+        final List<GesamtauswertungTableRow> gesamtauswertungTableRows = new ArrayList<>();
+        final GesamtauswertungTableRow row = new GesamtauswertungTableRow();
+        row.setLegend("Legend");
+        row.setCssColorBox("default");
+        final ArrayList<GesamtauswertungTableColumn> gesamtauswertungTableColumns = new ArrayList<>();
+        for (int index = 0; index < FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE + 3; index++) {
+            gesamtauswertungTableColumns.add(new GesamtauswertungTableColumn(String.valueOf(index)));
+            final GesamtauswertungTableHeader gesamtauswertungTableHeader = new GesamtauswertungTableHeader();
+            gesamtauswertungTableHeader.setHeader(String.valueOf(index));
+            headerExpected.add(gesamtauswertungTableHeader);
+            header.add(gesamtauswertungTableHeader.getHeader());
+        }
+        row.setGesamtauswertungTableColumns(gesamtauswertungTableColumns);
+        gesamtauswertungTableRows.add(row);
+
+        final Map<Integer, List<GesamtauswertungTableRow>> rowsPerTable = FillPdfBeanService.splitTableRowsIfNecessary(gesamtauswertungTableRows);
+        final List<List<GesamtauswertungTableHeader>> partition = ListUtils.partition(headerExpected,
+                FillPdfBeanService.MAX_ELEMENTS_IN_GESAMTAUSWERTUNG_TABLE);
+        final List<GesamtauswertungTable> expected = new ArrayList<>();
+        rowsPerTable.forEach((integer, gesamtauswertungTableRow) -> {
+            final GesamtauswertungTable gesamtauswertungTable = new GesamtauswertungTable();
+            gesamtauswertungTable.setGesamtauswertungTableHeaders(partition.get(integer));
+            gesamtauswertungTable.setGesamtauswertungTableRows(gesamtauswertungTableRow);
+            expected.add(gesamtauswertungTable);
+        });
+        assertThat(FillPdfBeanService.getGesamtauswertungTables(header, rowsPerTable), is(expected));
     }
 }
